--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <div id="root"></div>
         <footer>
-            Powered by Streambox, Inc. All rights reserved Version 1.18-DEV2
+            Powered by Streambox, Inc. All rights reserved Version 1.19
         </footer>
         <script type="module" src="./src/index.jsx"></script>
     </body>
